# ENPM808X_Midterm_Manipulator_IKSolver

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  cppcheck.txt  demo.py  readme.md
Cpplint_and_Cppcheck_Results/: cpplint_IK_cpp.txt
Cpplint_and_Cppcheck_Results/cppcheck/: cppcheck.txt
Cpplint_and_Cppcheck_Results/cpplint/: cpplint_FK_hpp.txt  cpplint_FK_test_cpp.txt  cpplint_IK_test_cpp.txt
Doxygen/: doxygen_config
app/: CMakeLists.txt  Forward_kinematics.cpp  Inverse_kinematics.cpp  Manipulator.cpp  kinematics.cpp  main.cpp
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
doxygen/html/: _c_make_lists_8txt.html  _forward__kinematics_8cpp.html  _forward__kinematics_8cpp__incl.map  _forward__kinematics_8cpp__incl.md5  _forward__kinematics_8hpp.html  _forward__kinematics_8hpp__dep__incl.map  _forward__kinematics_8hpp__dep__incl.md5  _forward__kinematics_8hpp__incl.map  _forward__kinematics_8hpp__incl.md5  _forward__kinematics_8hpp_source.html  _inverse__kinematics_8cpp.html  _inverse__kinematics_8cpp__incl.map  _inverse__kinematics_8cpp__incl.md5  _inverse__kinematics_8hpp.html  _inverse__kinematics_8hpp__dep__incl.map  _inverse__kinematics_8hpp__dep__incl.md5  _inverse__kinematics_8hpp__incl.map  _inverse__kinematics_8hpp__incl.md5  _inverse__kinematics_8hpp_source.html  _manipulator_8cpp.html  annotated.html  (+34 more)
include/: ControlSystem.hpp  Forward_kinematics.hpp  Inverse_kinematics.hpp  Manipulator.hpp  Map.hpp  RRTStar.hpp  kinematics.hpp  matplotlibcpp.h
test/: CMakeLists.txt  FK_test.cpp  IK_test.cpp  Manip_test.cpp  main.cpp
(+66 files in other folders)
